<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/Sky_blue"
        >

        <ImageButton
            android:id="@+id/btnArrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_arrow"
            android:background="@color/Sky_blue"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_demo_21l_6066"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDemo"
            android:background="@color/Sky_blue"


            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:id="@+id/Tabone"
                android:icon="@drawable/heart"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:id="@+id/Tabtwo"
                android:icon="@drawable/call"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:id="@+id/Tabthree"
                android:icon="@drawable/acc_icon"
                />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/tabLayout" >
        </androidx.viewpager.widget.ViewPager>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>